--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "test dockerizing a nodejs app ",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "nodemon server.js"
+    "test": "node server.js",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "docker",
